# multicore_engine_demo

./: .gitignore  .gitlab-ci-edges-env.yml  .gitlab-ci.yml  .gitmodules  BuildConfig.cmake  CMakeConfig.txt  CMakeLists.txt  LICENSE  build_all_windows.ps1  create_windows_build_env.ps1  file_template.txt  run_cppcheck.sh  sanitizer_blacklist.txt
.gitlab/issue_templates/: bug.md  feature.md  refactoring.md  subsystem.md
.gitlab/merge_request_templates/: default.md  upstream.md
multicore_engine_demo/: .cproject  .gitignore  .project  CMakeLists.txt  cmake debug demo.launch  cmake release demo.launch
multicore_engine_demo/include/mce/demo/: test_state.hpp  version.hpp
multicore_engine_demo/src/: main.cpp
multicore_engine_demo/src/demo/: test_state.cpp  version.cpp.in
multicore_engine_demo_assets/: .cproject  .gitignore  .project  CMakeLists.txt  assets.packdesc  demo.packdesc  entities.lud  materials.lud  models_col.lud  models_geo.lud  shaders.lud
multicore_engine_demo_assets/entities/: 10000cubes.etl  1000cubes.etl  100cubes.etl  10cubes.etl  benchmark.etl  demo.etf  demo.etl
multicore_engine_demo_assets/materials/: demo.matlib  test.matlib
multicore_engine_demo_assets/models/: cone.mtl  factory1.mtl  sphere.mtl  world.mtl
multicore_engine_demo_assets/models_blend/: cone.blend  cube.blend  factory1.blend  sphere.blend  world.blend
multicore_engine_demo_assets/shaders/: test_shader.frag  test_shader.vert  test_shader2.frag  test_shader2.vert
multicore_engine_demo_assets/textures/: flat.dds  test.dds  white.dds
multicore_engine_demo_assets/textures_src/: test.pdn
